k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-php-svc
  labels:
    app: devops-php
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: devops-php
